2006-05-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/dialogs/file-save-dialog.c: make sure dialog has
	not been destroyed when setting sensitive; fixes 
	bug #322978.

2006-05-18  Sven Neumann  <sven@gimp.org>

	* app/core/gimpparamspecs-desc.c: use the enum's name instead of
	the nick, strip the "GIMP_" prefix and canonicalize it.

2006-05-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c (script_fu_run): reverted one
	aspect of the last change and always load the scripts again.

2006-05-18  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/app.pl
	* tools/pdbgen/lib.pl: removed code that used to fiddle with the
	argument descriptions.

	* tools/pdbgen/pdb/*.pdb: removed %%desc%% placeholders, added some
	missing argument descriptions.

	* app/pdb/*_cmds.c
	* libgimp/gimpdrawabletransform_pdb.c
	* libgimp/gimpfloatingsel_pdb.c
	* libgimp/gimpgradient_pdb.c
	* libgimp/gimppainttools_pdb.c: regenerated.

	* app/core/Makefile.am
	* app/core/gimpparamspecs-desc.[ch] (gimp_param_spec_get_desc):
	new function that creates a parameter description for the PDB.

	* app/pdb/gimppdb-query.c
	* app/pdb/procedural_db_cmds.c: use the new function to create the
	descriptions on the fly.

2006-05-18  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimphuesaturationtool.c: add tooltips to all hue
	partition radio buttons.

	* app/tools/gimptextoptions.[ch]
	* app/tools/gimpvectoroptions.[ch]: add the widgets that are
	needed by the tools as members to the options structs instead of
	attaching them with g_object_set_data().

	* app/tools/gimptexttool.c
	* app/tools/gimpvectortool.c: access the struct members instead of
	using g_object_get_data().

2006-05-17  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in: Added quotes in two AM_CONDITIONAL lines to avoid
	complaints of "test: too many arguments" when running ./configure.

2006-05-18  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimp-tools.c (gimp_tools_init): move the align tool